expense-app/main/default/objects/Expense__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <description>Additional information regarding the expense</description>
    <inlineHelpText>Please enter any additional information about this expense</inlineHelpText>
    <label>Additional Info</label>
    <type>TextArea</type>
</CustomField>