expense-app/main/default/objects/Expense__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date of the expense</description>
    <inlineHelpText>Please select the date the expense was incurred</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>