expense-app/main/default/objects/Expense__c/fields/Expense_Month__c.field-meta.xml
<CustomField>
    <fullName>Expense_Month__c</fullName>
    <description>Returns the Month of Expenses in Text</description>
    <formula>CASE(MONTH( Date__c ), 1, &apos;1&apos;, 2, &apos;2&apos;,3, &apos;3&apos;,4, &apos;4&apos;, 5, &apos;5&apos;,6, &apos;6&apos;,7, &apos;7&apos;,8, &apos;8&apos;,9, &apos;9&apos;, 10, &apos;10&apos;, 11, &apos;11&apos;, &apos;12&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Month</label>
    <type>Text</type>
</CustomField>