expense-app/main/default/objects/Expense__c/fields/Is_Monthly_Expense__c.field-meta.xml
<CustomField>
    <fullName>Is_Monthly_Expense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator if this is a monthly expense</description>
    <inlineHelpText>Check this box if this is a monthly recurring expense</inlineHelpText>
    <label>Is Monthly Recurring Expense</label>
    <type>Checkbox</type>
</CustomField>