expense-app/main/default/objects/Expense__c/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ledger</label>
    <referenceTo>Ledger__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>