expense-app/main/default/objects/Expense__c/fields/Reimbursable__c.field-meta.xml
<CustomField>
    <fullName>Reimbursable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox determines if this expense is reimbursable.</description>
    <inlineHelpText>Check this box if the expense is reimbursable</inlineHelpText>
    <label>Reimbursable</label>
    <type>Checkbox</type>
</CustomField>