expense-app/main/default/objects/Expense__c/fields/Tracking_Account__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tracking Account</label>
    <referenceTo>Tracking_Account__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>