expense-app/main/default/objects/Expense__c/listViews/Expenses_in_Australia.listView-meta.xml
<ListView>
    <fullName>Expenses_in_Australia</fullName>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Is_Monthly_Expense__c</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Additional_Info__c</columns>
    <columns>Expense_Month__c</columns>
    <columns>Ledger__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expense_Month__c</field>
        <operation>greaterThan</operation>
        <value>4</value>
    </filters>
    <label>Expenses in Australia</label>
</ListView>