expense-app/main/default/objects/Expense__c/listViews/Monthly_Recurring_Expenses_in_Australia.listView-meta.xml
<ListView>
    <fullName>Monthly_Recurring_Expenses_in_Australia</fullName>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Is_Monthly_Expense__c</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Additional_Info__c</columns>
    <columns>Expense_Month__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Monthly_Expense__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Australia</value>
    </filters>
    <label>Monthly Recurring Expenses in Australia</label>
</ListView>